Added new Folders for project

--- a/Задание 3/Задание 3.csproj
+++ b/Задание 3/Задание 3.csproj
@@ -80,5 +80,11 @@
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+    <Folder Include="Models\" />
+    <Folder Include="Views\" />
+    <Folder Include="Сontrollers\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
