--- a/Задание 3/Задание 3.csproj
+++ b/Задание 3/Задание 3.csproj
@@ -45,8 +45,11 @@
   <ItemGroup>
     <Compile Include="Event.cs" />
     <Compile Include="IEvent.cs" />
+    <Compile Include="Models\EventModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\MainMenuView.cs" />
+    <Compile Include="Сontrollers\BaseEventController.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -82,9 +85,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Interfaces\" />
-    <Folder Include="Models\" />
-    <Folder Include="Views\" />
-    <Folder Include="Сontrollers\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
