--- a/Задание 3/DiaryProject.csproj
+++ b/Задание 3/DiaryProject.csproj
@@ -48,6 +48,8 @@
     <Compile Include="Models\EventModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\BaseView.cs" />
+    <Compile Include="Views\Interfaces\IBaseView.cs" />
     <Compile Include="Views\MainMenuView.cs" />
     <Compile Include="Сontrollers\BaseEventController.cs" />
   </ItemGroup>
