--- a/Задание 3/DiaryProject.csproj
+++ b/Задание 3/DiaryProject.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Primitives\Enum\MainMenuMode.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\AddEventView.cs" />
     <Compile Include="Views\BaseView.cs" />
     <Compile Include="Views\Interfaces\IBaseView.cs" />
     <Compile Include="Views\BaseMenuView.cs" />
